--- a/SWAYWM/sway/apps/waybar/waybar/style.css
+++ b/SWAYWM/sway/apps/waybar/waybar/style.css
@@ -1,145 +1,103 @@
+/* Colors */
+
+@define-color bg     #151515;
+@define-color bg-alt #303030;
+@define-color white  #ffffff;
+@define-color grey   #555555;
+@define-color black  #000000;
+@define-color red    #eb4d4b;
+@define-color yellow #5294e2;
+@define-color orange #e78a4e;
+
+/* Waybar style */
+
 * {
-  /* `otf-font-awesome` is required to be installed for icons */
-  font-family: "Iosevka", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+  font-family: Hack Nerd Font;
   font-size: 13px;
 }
 
 window#waybar {
-  background-color: rgba(43, 48, 59, 0.5);
-  border-bottom: 3px solid rgba(100, 114, 125, 0.5);
-  color: #ffffff;
+  background-color: @bg;
+  color: @white;
   transition-property: background-color;
   transition-duration: .5s;
 }
+window#waybar.hidden { opacity: 0.2; }
 
-window#waybar.hidden {
-  opacity: 0.2;
+#workspaces.vertical {
+  border-radius: 6px;
+  background-color: @bg-alt;
+  margin: 4px;
+  padding: 2px;
 }
-
-/*
-window#waybar.empty {
-background-color: transparent;
-}
-window#waybar.solo {
-background-color: #FFFFFF;
-}
-*/
-
-window#waybar.termite {
-  background-color: #3F3F3F;
-}
-
-window#waybar.chromium {
-  background-color: #000000;
-  border: none;
-}
-
-button {
-  /* Use box-shadow instead of border so the text isn't offset */
-  box-shadow: inset 0 -3px transparent;
-  /* Avoid rounded borders under each button name */
-  border: none;
-  border-radius: 0;
-}
-
-/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
-button:hover {
-  background: inherit;
-  box-shadow: inset 0 -3px #ffffff;
-}
-
 #workspaces button {
-  padding: 0 5px;
   background-color: transparent;
-  color: #ffffff;
+  color: @yellow;
+  padding: 0 2px;
+  min-width: 0;
+}
+#workspaces button.focused { 
+  background-color: @yellow; 
+  color: @black;
+  font-weight: bold; 
+}
+#workspaces button.urgent { background-color: @red; }
+#workspaces button.persistent { color: @white; }
+
+#custom-launcher {
+  margin: 4px;
+  padding: 2px 4px 2px 1px;
 }
 
-#workspaces button:hover {
-  background: rgba(0, 0, 0, 0.2);
-}
+#tray { margin: 4px; }
+#tray > .passive { -gtk-icon-effect: dim; }
+#tray > .needs-attention { -gtk-icon-effect: highlight; }
 
-#workspaces button.focused {
-  background-color: #64727D;
-  box-shadow: inset 0 -3px #ffffff;
+#network { 
+  border-radius: 6px 6px 0px 0px ;
+  background-color: @bg-alt;
+  margin: 4px 4px 0px 4px;
+  padding: 2px 4px 2px 1px;
 }
+#network.linked { background-color: @orange; }
+#network.disconnected { background-color: @red; }
 
-#workspaces button.urgent {
-  background-color: #eb4d4b;
+#pulseaudio {
+  background-color: @bg-alt;
+  color: @white;
+  margin: 0px 4px 0px 4px;
+  padding: 2px 4px 6px 1px;
 }
-
-#mode {
-  background-color: #64727D;
-  border-bottom: 3px solid #ffffff;
-}
-
-#clock,
-#battery,
-#cpu,
-#memory,
-#disk,
-#temperature,
-#backlight,
-#network,
-#pulseaudio,
-#wireplumber,
-#custom-media,
-#tray,
-#mode,
-#idle_inhibitor,
-#scratchpad {
-  padding: 0 4px;
-  color: #ffffff;
-}
-
-#window,
-#workspaces {
-  margin: 0 4px;
-}
-
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
-  margin-left: 0;
-}
-
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
-  margin-right: 0;
-}
+#pulseaudio.muted { background-color: @red; }
 
 #clock {
-  background-color: #64727D;
+  border-radius: 6px;
+  background-color: @grey;
+  font-weight: bold;
+  font-size: 14px;
+  margin: -4px 4px 2px 4px;
+  padding: 2px;
 }
 
-#battery {
-  background-color: #ffffff;
-  color: #000000;
+#custom-power {
+  border-radius: 6px;
+  background-color: @red;
+  color: @white;
+  margin: 4px;
+  padding: 2px 4px 2px 1px;
 }
 
-#battery.charging, #battery.plugged {
-  color: #ffffff;
-  background-color: #26A65B;
-}
+/* Tooltip popups */
+tooltip { background-color: @bg-alt; }
+tooltip label { color: @white; }
 
-@keyframes blink {
-to {
-  background-color: #ffffff;
-  color: #000000;
-}
-}
+/* If workspaces is the leftmost module, omit left margin */
+.modules-left > widget:first-child > #workspaces { margin-left: 0; }
+/* If workspaces is the rightmost module, omit right margin */
+.modules-right > widget:last-child > #workspaces { margin-right: 0; }
 
-#battery.critical:not(.charging) {
-  background-color: #f53c3c;
-  color: #ffffff;
-  animation-name: blink;
-  animation-duration: 0.5s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-}
 
-label:focus {
-  background-color: #000000;
-}
+
 
 #cpu {
   background-color: #2ecc71;
@@ -150,113 +108,14 @@ label:focus {
   background-color: #9b59b6;
 }
 
-#disk {
-  background-color: #964B00;
-}
+#temperature { background-color: #f0932b; }
+#temperature.critical { background-color: #eb4d4b; }
 
-#backlight {
-  background-color: #90b1b1;
-}
-
-#network {
-  background-color: #2980b9;
-}
-
-#network.disconnected {
-  background-color: #f53c3c;
-}
-
-#pulseaudio {
-  background-color: #f1c40f;
-  color: #000000;
-}
-
-#pulseaudio.muted {
-  background-color: #90b1b1;
-  color: #2a5c45;
-}
-
-#wireplumber {
-  background-color: #fff0f5;
-  color: #000000;
-}
-
-#wireplumber.muted {
-  background-color: #f53c3c;
-}
-
-#custom-media {
-  background-color: #66cc99;
-  color: #2a5c45;
-  min-width: 100px;
-}
-
-#custom-media.custom-spotify {
-  background-color: #66cc99;
-}
-
-#custom-media.custom-vlc {
-  background-color: #ffa000;
-}
-
-#temperature {
-  background-color: #f0932b;
-}
-
-#temperature.critical {
-  background-color: #eb4d4b;
-}
-
-#tray {
-  background-color: #2980b9;
-}
-
-#tray > .passive {
-  -gtk-icon-effect: dim;
-}
-
-#tray > .needs-attention {
-  -gtk-icon-effect: highlight;
-  background-color: #eb4d4b;
-}
-
-#idle_inhibitor {
-  background-color: #2d3436;
-}
-
+#idle_inhibitor { background-color: #2d3436; }
 #idle_inhibitor.activated {
   background-color: #ecf0f1;
   color: #2d3436;
 }
 
-#language {
-  background: #00b093;
-  color: #740864;
-  padding: 0 5px;
-  margin: 0 5px;
-  min-width: 16px;
-}
-
-#keyboard-state {
-  background: #97e1ad;
-  color: #000000;
-  padding: 0 0px;
-  margin: 0 5px;
-  min-width: 16px;
-}
-
-#keyboard-state > label {
-  padding: 0 5px;
-}
-
-#keyboard-state > label.locked {
-  background: rgba(0, 0, 0, 0.2);
-}
-
-#scratchpad {
-  background: rgba(0, 0, 0, 0.2);
-}
-
-#scratchpad.empty {
-  background-color: transparent;
-}
+#scratchpad { background: rgba(0, 0, 0, 0.2); }
+#scratchpad.empty { background-color: transparent; }
