--- a/SWAYWM/sway/apps/wofi/menu/style.css
+++ b/SWAYWM/sway/apps/wofi/menu/style.css
@@ -1,5 +1,5 @@
 window {
-  font-family: Iosevka Nerd Font;
+  font-family: Hack Nerd Font;
   font-weight: bold;
   margin: 0px;
   border: 8px solid #303030; 
